# Unicode-Guard

./: README.md  pyproject.toml  run_gui.bat
.github/workflows/: unicode-guard.yml
ci/: external-project-github-actions.yml  gitlab-ci.yml
examples/: trojan_source_sample.py
tests/: test_scanner.py
unicode_guard/: __init__.py  __main__.py  gui.py  rules.py  scanner.py
